@@ -46,7 +46,6 @@ GSList * load_beamspec (void);
 
 GList *load_pnames_file(gchar *pnames_file);
 void load_object_per_quad (gpointer obj, GSList * obj_per_quad[TOTAL_QUADS], double wx, gdouble wy);
-//void load_ships_per_quad(GnomeCanvasItem *ship, GSList *ships_per_quad[TOTAL_QUADS]);
 
 gint16 getWord(guchar* p);
 gint32 getDWord(guchar* p);
