@@ -1,3 +1,7 @@
+Version ?.?.?? (released ??-??-????):
+
+	* Starchart placed on the middle when defining a new game.
+
 Version 0.2.11 (released 03-15-2004):
 
 	* Bugs on some ship cargo unload and transfer methods were fixed.
